Fix QR options on mobile being too short

--- a/_sass/qr.scss
+++ b/_sass/qr.scss
@@ -17,17 +17,14 @@ img#qrCodeImage {
 
   td#qrOptions {
     width: 100%;
+    display: block;
 
-    > tbody > tr > td {
+    > select {
       width: 100%;
+    }
 
-      > select {
-        width: 100%;
-      }
-
-      > input {
-        width: 100%;
-      }
+    > input {
+      width: 100%;
     }
   }
 }
